--- a/your-code/challenge-3.ipynb
+++ b/your-code/challenge-3.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,11 +44,267 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month</th>\n",
+       "      <th>day</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>InvoiceDate</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>amount_spent</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>536365.0</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>white hanging heart t-light holder</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>536365.0</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>white metal lantern</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>536365.0</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>cream cupid hearts coat hanger</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>22.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>536365.0</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>knitted union flag hot water bottle</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>536365.0</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>red woolly hottie white heart.</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>20.34</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>5</td>\n",
+       "      <td>536365.0</td>\n",
+       "      <td>22752</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>set 7 babushka nesting boxes</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>7.65</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>15.30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>6</td>\n",
+       "      <td>536365.0</td>\n",
+       "      <td>21730</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>glass star frosted t-light holder</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2010-12-01 08:26:00</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>25.50</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>7</td>\n",
+       "      <td>536366.0</td>\n",
+       "      <td>22633</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>hand warmer union jack</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2010-12-01 08:28:00</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>11.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>8</td>\n",
+       "      <td>536366.0</td>\n",
+       "      <td>22632</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>hand warmer red polka dot</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2010-12-01 08:28:00</td>\n",
+       "      <td>1.85</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>11.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>9</td>\n",
+       "      <td>536367.0</td>\n",
+       "      <td>84879</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>assorted colour bird ornament</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>2010-12-01 08:34:00</td>\n",
+       "      <td>1.69</td>\n",
+       "      <td>13047.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>54.08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Unnamed: 0  InvoiceNo StockCode    year  month  day  hour  \\\n",
+       "0          0   536365.0    85123A  2010.0   12.0  3.0   8.0   \n",
+       "1          1   536365.0     71053  2010.0   12.0  3.0   8.0   \n",
+       "2          2   536365.0    84406B  2010.0   12.0  3.0   8.0   \n",
+       "3          3   536365.0    84029G  2010.0   12.0  3.0   8.0   \n",
+       "4          4   536365.0    84029E  2010.0   12.0  3.0   8.0   \n",
+       "5          5   536365.0     22752  2010.0   12.0  3.0   8.0   \n",
+       "6          6   536365.0     21730  2010.0   12.0  3.0   8.0   \n",
+       "7          7   536366.0     22633  2010.0   12.0  3.0   8.0   \n",
+       "8          8   536366.0     22632  2010.0   12.0  3.0   8.0   \n",
+       "9          9   536367.0     84879  2010.0   12.0  3.0   8.0   \n",
+       "\n",
+       "                           Description  Quantity          InvoiceDate  \\\n",
+       "0   white hanging heart t-light holder       6.0  2010-12-01 08:26:00   \n",
+       "1                  white metal lantern       6.0  2010-12-01 08:26:00   \n",
+       "2       cream cupid hearts coat hanger       8.0  2010-12-01 08:26:00   \n",
+       "3  knitted union flag hot water bottle       6.0  2010-12-01 08:26:00   \n",
+       "4       red woolly hottie white heart.       6.0  2010-12-01 08:26:00   \n",
+       "5         set 7 babushka nesting boxes       2.0  2010-12-01 08:26:00   \n",
+       "6    glass star frosted t-light holder       6.0  2010-12-01 08:26:00   \n",
+       "7               hand warmer union jack       6.0  2010-12-01 08:28:00   \n",
+       "8            hand warmer red polka dot       6.0  2010-12-01 08:28:00   \n",
+       "9        assorted colour bird ornament      32.0  2010-12-01 08:34:00   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country  amount_spent  \n",
+       "0       2.55     17850.0  United Kingdom         15.30  \n",
+       "1       3.39     17850.0  United Kingdom         20.34  \n",
+       "2       2.75     17850.0  United Kingdom         22.00  \n",
+       "3       3.39     17850.0  United Kingdom         20.34  \n",
+       "4       3.39     17850.0  United Kingdom         20.34  \n",
+       "5       7.65     17850.0  United Kingdom         15.30  \n",
+       "6       4.25     17850.0  United Kingdom         25.50  \n",
+       "7       1.85     17850.0  United Kingdom         11.10  \n",
+       "8       1.85     17850.0  United Kingdom         11.10  \n",
+       "9       1.69     13047.0  United Kingdom         54.08  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "data = pd.read_csv(\"Orders.csv\")\n",
+    "data.head(5)"
    ]
   },
   {
@@ -125,7 +381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -139,7 +395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.9"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
