--- a/your-code/challenge-1, 11.12.22.ipynb
+++ b/your-code/challenge-1, 11.12.22.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -291,14 +291,15 @@
        "[800 rows x 13 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pokemon = pd.read_csv(\"pokemon.csv\")\n",
-    "pokemon"
+    "pokemon\n",
+    "#Read a comma-separated values (csv) file into DataFrame."
    ]
   },
   {
@@ -310,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -540,13 +541,18 @@
        "9       50       64     43           1      False  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pokemon.head(10)"
+    "pokemon.head(10)\n",
+    "#Return the first n rows.\n",
+    "# This function returns the first n rows for the object based on position. \n",
+    "# It is useful for quickly testing if your object has the right type of data in it.\n",
+    "# For negative values of n, this function returns all rows except the last |n| rows, \n",
+    "# equivalent to"
    ]
   },
   {
@@ -585,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +602,7 @@
        "       'Dragon', 'Dark', 'Steel', 'Flying', nan], dtype=object)"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,13 +610,20 @@
    "source": [
     "# your code here\n",
     "# show a list of type 1 and type 2\n",
-    "# split on mega on left is venasaur\n",
-    "# you take mega on the front and replace them \n",
+    "\n",
+    "# separate extract of values\n",
     "# pokemon[['Type 1','Type 2']]\n",
     "# pokemon['Type 1'].unique()\n",
     "# pokemon['Type 2'].unique()\n",
     "\n",
     "# pd.unique(pokemon[['Type 1', 'Type 2']].values.ravel('K'))\n",
+    "# pokemon_types = dataframe\n",
+    "# pd.concat([pokemon['Type 1'], pokemon['Type 2']]).unique()\n",
+    "\n",
+    "# The concat() function (in the main pandas namespace) does all of the heavy lifting of performing concatenation \n",
+    "#operations along an axis while performing optional set logic (union or intersection) of \n",
+    "#the indexes (if any) on the other axes. Note that I say “if any” because \n",
+    "#there is only a single possible axis of concatenation for Series\n",
     "\n",
     "pokemon_types = pd.concat([pokemon['Type 1'], pokemon['Type 2']]).unique()\n",
     "pokemon_types"
@@ -623,6 +636,24 @@
     "#### Cleanup `Name` that contain \"Mega\".\n",
     "\n",
     "If you have checked out the pokemon names carefully enough, you should have found there are junk texts in the pokemon names which contain \"Mega\". We want to clean up the pokemon names. For instance, \"VenusaurMega Venusaur\" should be \"Mega Venusaur\", and \"CharizardMega Charizard X\" should be \"Mega Charizard X\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n",
+    "# # What is DF [] in Python? DataFrame. DataFrame is a 2-dimensional labeled data structure with columns\n",
+    "\n",
+    "# https://datatofish.com/if-condition-in-pandas-dataframe/ if word in i \n",
+    "\n",
+    "# What does split do in pandas? split() Pandas provide a method to split string around a passed separator/delimiter. \n",
+    "# After that, the string can be stored as a list in a series or it can also be used to create \n",
+    "# multiple column data frames from a single separated string.\n",
+    "# https://www.geeksforgeeks.org/python-pandas-dataframe-append/ \n",
+    "# append = hinzufügen"
    ]
   },
   {
@@ -894,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1135,13 +1166,14 @@
        "9       64     43           1      False   0.738462  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# your code here\n",
+    "\n",
     "pokemon['A/D Ratio'] = pokemon['Attack']/pokemon['Defense']\n",
     "pokemon.head(10)"
    ]
@@ -1155,7 +1187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1165,7 +1197,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1185,7 +1217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1195,7 +1227,7 @@
        "Name: Name, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1219,7 +1251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1371,7 +1403,7 @@
        "4       50     65           1      False   1.209302          Fire  "
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1397,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1549,13 +1581,16 @@
        "348       95       40     95           3      False      3.000  Water Dark  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# pokemon.nlargest(5,['A/D Ratio'])\n",
+    "# create a list of top 5 column values in the dataframe\n",
+    "# max_adr means maximum attack/defense ratio\n",
+    "\n",
     "max_adr = pokemon.sort_values('A/D Ratio', ascending=False).head(5)\n",
     "max_adr"
    ]
@@ -1571,7 +1606,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# best combinations of Combo type column values and best attack/defense ratio = adr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1624,7 @@
        "array(['Psychic', 'Water Dark', 'Bug Poison', 'Rock'], dtype=object)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1603,7 +1647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1731,7 +1775,7 @@
        "Water Dark  69.166667   0.000000  88.833333  63.500000  87.166667  493.833333  "
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1739,6 +1783,13 @@
    "source": [
     "pokemon[pokemon['Combo Type'].isin(best_combos)].pivot_table(index=['Combo Type'])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
